--- a/src/App.css
+++ b/src/App.css
@@ -94,13 +94,34 @@ code {
 
 .App-header {
   background-color: #212121;
-  min-height: 100vh;
+  min-height: calc(100vh - 64px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #FAFAFA;
+}
+
+.small {
+  font-size: calc(8px + 2vmin);
+  margin: 0 15px 15px 0;
+}
+
+.small2 {
+  font-size: calc(6px + 2vmin);
+  margin: 0 15px 15px 0;
+}
+
+footer {
+  background-color: #212121;
+  height: 64px;
+  color: #FAFAFA;
+  font-size: calc(6px + 1vmin);
+}
+
+footer p {
+  margin: 0 15px;
 }
 
 .App-log {
