--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,8 @@ code {
 
 .App-header {
   background-color: #212121;
-  min-height: calc(100vh - 64px);
+  height: calc(100vh - 64px);
+  min-height: calc(100dvh - 64px);
   display: flex;
   flex-direction: column;
   align-items: center;
