--- a/src/App.css
+++ b/src/App.css
@@ -85,12 +85,12 @@ code {
 
 .small {
   font-size: calc(8px + 2vmin);
-  margin: 0 15px 15px 0;
+  margin: 0 15px 15px 15px;
 }
 
 .small2 {
   font-size: calc(6px + 2vmin);
-  margin: 0 15px 15px 0;
+  margin: 0 15px 15px 15px;
 }
 
 footer {
