--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
+  text-shadow: 1px 1px 2px black;
 }
+
+
 
 .App-logo {
   max-height: 256px;
@@ -72,7 +75,6 @@ code {
 }
 
 .App-header {
-  background-color: #212121;
   min-height: calc(100vh - 64px);
   min-height: calc(100dvh - 64px);
   display: flex;
@@ -94,7 +96,6 @@ code {
 }
 
 footer {
-  background-color: #212121;
   height: 64px;
   color: #FAFAFA;
   font-size: calc(6px + 1vmin);
