--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  text-shadow: 1px 1px 2px black;
+  text-shadow: 1px 1px 2px #000000;
 }
 
 
@@ -10,6 +10,9 @@
   max-width: 90vw;
   pointer-events: none;
   border-radius: 50%;
+  border-color: #FAFAFA;
+  border-width: 4px;
+  border-style: solid;
   filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
   position: absolute;
   display: block;
