--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   text-shadow: 1px 1px 2px #000000;
+  
 }
 
 
@@ -11,7 +12,7 @@
   pointer-events: none;
   border-radius: 50%;
   border-color: #FAFAFA;
-  border-width: 4px;
+  border-width: 3px;
   border-style: solid;
   filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
   position: absolute;
@@ -90,12 +91,12 @@ code {
 
 .small {
   font-size: calc(8px + 2vmin);
-  margin: 0 15px 15px 15px;
+  margin: 0 25px 25px 15px;
 }
 
 .small2 {
   font-size: calc(6px + 2vmin);
-  margin: 0 15px 15px 15px;
+  margin: 0 25px 25px 15px;
 }
 
 footer {
@@ -105,7 +106,7 @@ footer {
 }
 
 footer p {
-  margin: 0 15px;
+  margin: 0 25px;
 }
 
 .App-log {
@@ -114,6 +115,7 @@ height:256px;
 display: flex;
 align-items: center;
 justify-content: center;
+padding-top: 25px;
 }
 
 .icons {
