--- a/src/App.css
+++ b/src/App.css
@@ -131,11 +131,11 @@ padding-top: 25px;
 }
 
 a {
-  color:#FAFAFA
+  color:#FAFAFA;
 }
 
 a:hover {
-  color:#EEEEEE
+  color:#DB4437;
 }
 
 .social a {
